Primera Entrega del Proyecto Final

--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,3 +1,20 @@
 .card {
     width: 18rem;
 }
+
+.imagenCard{
+    width: 600px ;
+    height: 200px;
+    object-fit: contain;
+
+}
+
+
+
+
+.contenedorCard:hover .itemCard {
+    -webkit-transform:scale(0.9);transform:scale(1.1);
+    transition-duration: 1s;
+    box-shadow: rgb(0, 81, 255) 1px; 
+}
+
